hopefully the last Input spacing fixes!

--- a/src/components/Input.scss
+++ b/src/components/Input.scss
@@ -104,7 +104,7 @@
 
   .clear-button {
     position: absolute;
-    right: $margin-large;
+    right: $margin-default;
     top: 50%;
     margin-top: -18px; // half icon height
   }
