--- a/src/components/SearchInput.scss
+++ b/src/components/SearchInput.scss
@@ -5,7 +5,7 @@
 
   .search-icon {
     position: absolute;
-    left: $padding-large;
+    left: $padding-default;
     top: 50%;
     margin-top: -12px; // half icon height
     z-index: 1;
